--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Versão</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">3.25.0</p>
+                        <p class="card-text mbr-fonts-style display-7">3.26.0</p>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                             <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">22 de Setembro de 2022</p>
+                        <p class="card-text mbr-fonts-style display-7">30 de Setembro de 2022</p>
                     </div>
                 </div>
             </div>
@@ -137,13 +137,12 @@
             <div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/ultrafarma-1.png" alt="Logo Ultrafarma" title="">
+                        <img src="assets/images/mbr.png" alt="Logo Atualização" title="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Padrão Ultrafarma</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
-                            <strong>22/09/2022</strong></h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Inserção de cadernos de ofertas padrão automaticamente e criação do padrão ultrafarma para bases limpas</p>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Atualizações Automáticas do Sistema</strong></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>30/09/2022</strong></h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Atualização automática do sistema com exibição das novidades de cada versão</p>
                     </div>
                     
                 </div>
@@ -151,12 +150,13 @@
             <div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr.png" alt="Logo Atualização" title="">
+                        <img src="assets/images/ultrafarma-1.png" alt="Logo Ultrafarma" title="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Atualizações da CleanChinchila</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>20/09/2022</strong></h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Novas possibilidades de atualizações das versões locais do A7 Pharma</p>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Padrão Ultrafarma</strong></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
+                            <strong>22/09/2022</strong></h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Inserção de cadernos de ofertas padrão automaticamente e criação do padrão ultrafarma para bases limpas</p>
                     </div>
                     
                 </div>
