--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Versão</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">3.26.0</p>
+                        <p class="card-text mbr-fonts-style display-7">3.26.1</p>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                             <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">30 de Setembro de 2022</p>
+                        <p class="card-text mbr-fonts-style display-7">07 de Outubro de 2022</p>
                     </div>
                 </div>
             </div>
