--- a/notasversao.html
+++ b/notasversao.html
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                     <div class="bottom-line">
-                        <p class="mbr-text mbr-fonts-style display-7">- O contador de tempo parcial quando se iniciava o wildfly duplicava o timer e dessa forma contava 2 segundos a cada segundo real<br>  - Quando se iniciava o sistema e não havia nenhuma atualização, o contador de tempo parcial continuava contando<br>  - Havia necessidade atualização em scripts dos layouts de importação dos sistemas Trier e Big<br>  - Havia necessidade refatoração de código</p>
+                        <p class="mbr-text mbr-fonts-style display-7">- O contador de tempo parcial quando se iniciava o wildfly duplicava o timer e dessa forma contava 2 segundos a cada segundo real<br>  - Quando se iniciava o sistema e não havia nenhuma atualização, o contador de tempo parcial continuava contando<br>  - Havia necessidade de atualização em scripts dos layouts de importação dos sistemas Trier e Big<br>  - Havia necessidade de refatoração de código</p>
                     </div>
                 </div>
             </div>
