--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Versão</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">3.27.0</p>
+                        <p class="card-text mbr-fonts-style display-7">3.27.2</p>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                             <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">07 de Dezembro de 2022</p>
+                        <p class="card-text mbr-fonts-style display-7">09 de Janeiro de 2023</p>
                     </div>
                 </div>
             </div>
@@ -225,7 +225,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2022 Desenvolvimento - Importação de Dados - Todos os direitos reservados</p>
+                    © Copyright 2023 Desenvolvimento - Importação de Dados - Todos os direitos reservados</p>
             </div>
         </div>
     </div>
