--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="sistemasmapeados.html" target="_blank">Sistemas Mapeados</a></li></ul>
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info text-primary display-4" href="notasversao.html" target="_blank">Notas de versão</a></li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-success display-4" href="paginaconstrucao.html" target="_blank">Documentação</a></div>
