--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Versão</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">3.27.3</p>
+                        <p class="card-text mbr-fonts-style display-7">3.27.4</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                             <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">13 de Janeiro de 2023</p>
+                        <p class="card-text mbr-fonts-style display-7">07 de Fevereiro de 2023</p>
                     </div>
                 </div>
             </div>
