--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="row">
             <div class="col-12">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                    <strong>Versão mais recente</strong></h3>
+                    <strong>Versões mais recentes</strong></h3>
                 
             </div>
         </div>
@@ -104,8 +104,8 @@
                         <div class="iconfont-wrapper">
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
                         </div>
-                        <h5 class="card-title mbr-fonts-style display-7"><strong>Versão</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">3.32.2</p>
+                        <h5 class="card-title mbr-fonts-style display-7"><strong>Versão do Importador</strong></h5>
+                        <p class="card-text mbr-fonts-style display-7">3.33.0</p>
                     </div>
                 </div>
             </div>
@@ -115,8 +115,30 @@
                         <div class="iconfont-wrapper">
                             <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
                         </div>
-                        <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">22 de Maio de 2023</p>
+                        <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento do Importador</strong></h5>
+                        <p class="card-text mbr-fonts-style display-7">19 de Junho de 2023</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card col-12 col-md-6 col-lg-3">
+                <div class="card-wrapper">
+                    <div class="card-box align-center">
+                        <div class="iconfont-wrapper">
+                            <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
+                        </div>
+                        <h5 class="card-title mbr-fonts-style display-7"><strong>Versão de uso do A7 Pharma</strong></h5>
+                        <p class="card-text mbr-fonts-style display-7">3.23.6.0</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card col-12 col-md-6 col-lg-3">
+                <div class="card-wrapper">
+                    <div class="card-box align-center">
+                        <div class="iconfont-wrapper">
+                            <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
+                        </div>
+                        <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento do A7 Pharma</strong></h5>
+                        <p class="card-text mbr-fonts-style display-7">16 de Junho de 2023</p>
                     </div>
                 </div>
             </div>
