--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Versão do Importador</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">3.34.0</p>
+                        <p class="card-text mbr-fonts-style display-7">3.35.0</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                             <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento do Importador</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">20 de Julho de 2023</p>
+                        <p class="card-text mbr-fonts-style display-7">04 de Setembro de 2023</p>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Versão de uso do A7 Pharma</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">3.30.1.0</p>
+                        <p class="card-text mbr-fonts-style display-7">3.31.11.0</p>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                             <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento do A7 Pharma</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">18 de Julho de 2023</p>
+                        <p class="card-text mbr-fonts-style display-7">22 de Agosto de 2023</p>
                     </div>
                 </div>
             </div>
