--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Versão do Importador</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">3.35.0</p>
+                        <p class="card-text mbr-fonts-style display-7">3.35.1</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                             <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento do Importador</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">04 de Setembro de 2023</p>
+                        <p class="card-text mbr-fonts-style display-7">04 de Outubro de 2023</p>
                     </div>
                 </div>
             </div>
