--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Versão do Importador</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">3.35.1</p>
+                        <p class="card-text mbr-fonts-style display-7">3.36.0</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                             <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento do Importador</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">04 de Outubro de 2023</p>
+                        <p class="card-text mbr-fonts-style display-7">27 de Dezembro de 2023</p>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Versão de uso do A7 Pharma</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">3.37.6.0</p>
+                        <p class="card-text mbr-fonts-style display-7">3.37.19.0</p>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                             <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento do A7 Pharma</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">20 de Outubro de 2023</p>
+                        <p class="card-text mbr-fonts-style display-7">26 de Dezembro de 2023</p>
                     </div>
                 </div>
             </div>
