--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <span class="mbr-iconfont mobi-mbri-code mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Versão do Importador</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">3.36.0</p>
+                        <p class="card-text mbr-fonts-style display-7">3.36.1</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                             <span class="mbr-iconfont mobi-mbri-calendar mobi-mbri"></span>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>Lançamento do Importador</strong></h5>
-                        <p class="card-text mbr-fonts-style display-7">27 de Dezembro de 2023</p>
+                        <p class="card-text mbr-fonts-style display-7">18 de Janeiro de 2024</p>
                     </div>
                 </div>
             </div>
@@ -248,7 +248,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2023 Desenvolvimento - Importação de Dados - Todos os direitos reservados</p>
+                    © Copyright 2024 Desenvolvimento - Importação de Dados - Todos os direitos reservados</p>
             </div>
         </div>
     </div>
